--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,6 +15,15 @@
 				"kind": "build",
 				"isDefault": true
 			}
+		},
+		{
+			"label": "Compile and Watch",
+			"type": "shell",
+			"command": "npm run watch",
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
 		}
 	]
 }
